Section-7/7.2-IngressController/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-app-service
  labels:
    app: ingress-app
spec:
  type: ClusterIP
  selector:
    app: ingress-app
  ports:
    - port: 80
      targetPort: 80
